feat: 자동 주입 파이프라인 구축 (#137)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
   event-ai:
     build: ./ai/event_ai
     container_name: aria-event-ai
+    env_file: .env
     deploy:
       resources:
         reservations:
