--- a/ai/activity_ai/requirements.txt
+++ b/ai/activity_ai/requirements.txt
@@ -1,130 +1,51 @@
-argcomplete==1.8.1
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-blinker==1.4
-catkin-pkg-modules==1.1.0
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-cloud-init==25.2
-colcon-argcomplete==0.3.3
-colcon-bash==0.5.0
-colcon-cd==0.2.1
-colcon-cmake==0.2.29
-colcon-common-extensions==0.3.0
-colcon-core==0.20.1
-colcon-defaults==0.2.9
-colcon-devtools==0.3.0
-colcon-installed-package-information==0.2.1
-colcon-library-path==0.2.1
-colcon-metadata==0.2.5
-colcon-notification==0.3.0
-colcon-output==0.2.13
-colcon-override-check==0.0.1
-colcon-package-information==0.4.0
-colcon-package-selection==0.2.10
-colcon-parallel-executor==0.3.0
-colcon-pkg-config==0.1.0
-colcon-powershell==0.4.0
-colcon-python-setup-py==0.2.9
-colcon-recursive-crawl==0.2.3
-colcon-ros==0.5.0
-colcon-test-result==0.3.8
-colcon-zsh==0.5.0
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cov-core==1.15.0
-coverage==6.2
-cryptography==3.4.8
-dbus-python==1.2.18
-distlib==0.3.4
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docutils==0.17.1
-empy==3.3.4
-flake8==4.0.1
-html5lib==1.1
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-iniconfig==1.1.1
-jeepney==0.7.1
-Jinja2==3.0.3
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==23.5.0
-lark==1.1.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lxml==4.8.0
-MarkupSafe==2.0.1
-mccabe==0.6.1
-more-itertools==8.10.0
-netifaces==0.11.0
-nose2==0.9.2
-notify2==0.3
-numpy==1.21.5
-oauthlib==3.2.0
-olefile==0.46
-packaging==21.3
-pexpect==4.8.0
-Pillow==9.0.1
-pluggy==0.13.0
-psutil==5.9.0
-ptyprocess==0.7.0
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycodestyle==2.8.0
-pydocstyle==6.1.1
-pyflakes==2.4.0
-Pygments==2.11.2
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-pytest==6.2.5
-pytest-cov==3.0.0
-python-apt==2.4.0+ubuntu4.1
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-python-magic==0.4.24
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.25.1
-roman==3.3
-rosdep==0.26.0
-rosdep-modules==0.26.0
-rosdistro-modules==1.0.1
-rospkg-modules==1.6.1
-SecretStorage==3.3.1
-service-identity==18.1.0
-six==1.16.0
-snowballstemmer==2.2.0
-sos==4.9.2
-soupsieve==2.3.1
-ssh-import-id==5.11
-systemd-python==234
-toml==0.10.2
-Twisted==22.1.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-vcstool==0.3.0
-wadllib==1.3.6
-webencodings==0.5.1
-zipp==1.0.0
-zope.interface==5.4.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+contourpy==1.3.2
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.3
+cycler==0.12.1
+filelock==3.20.3
+fonttools==4.61.1
+fsspec==2026.1.0
+idna==3.11
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+mpmath==1.3.0
+networkx==3.4.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
+opencv-python==4.9.0.80
+packaging==26.0
+pillow==12.1.0
+polars==1.37.1
+polars-runtime-32==1.37.1
+psutil==7.2.2
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+PyYAML==6.0.3
+requests==2.32.5
+scipy==1.15.3
+six==1.17.0
+sympy==1.14.0
+torch==2.0.1
+torchvision==0.15.2
+typing_extensions==4.15.0
+ultralytics==8.4.9
+ultralytics-thop==2.0.18
+urllib3==2.6.3
