--- a/robot/src/my_robot_description/CMakeLists.txt
+++ b/robot/src/my_robot_description/CMakeLists.txt
@@ -24,6 +24,11 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
+
 install(DIRECTORY urdf
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
