--- a/ai/event_ai/Dockerfile
+++ b/ai/event_ai/Dockerfile
@@ -1,15 +1,19 @@
 FROM pytorch/pytorch:2.2.0-cuda12.1-cudnn8-runtime
-# 2. 필수 라이브러리 설치 (기존 방식 유지 및 확장)
 
-# psycopg2-binary, numpy, pandas, scikit-learn 포함
+# 1. 필수 라이브러리 설치
 RUN pip install --no-cache-dir pandas scikit-learn psycopg2-binary numpy
+
+# 작업 디렉토리 설정
 WORKDIR /workspace
 
-# 3. 소스 코드 복사
+# 2. 소스 코드 복사 (전체 구조를 그대로 컨테이너로 복사)
 COPY . .
 
-# 4. 환경 검증을 위해 첫 실행 시 check_env.py를 실행
-# 나중에 실전용으로 바꿀 때 CMD ["python", "inference.py"]로 수정
-CMD ["python", "check_env.py"]
-CMD ["tail", "-f", "/dev/null"]
+# 3. 환경 변수 설정 (파이썬이 core, training 폴더를 인식하게 함)
+ENV PYTHONPATH=/workspace
 
+# 4. 실행 스크립트 경로 수정
+CMD ["python", "utils/check_env.py"]
+
+# 컨테이너 유지용 (개발 단계)
+# CMD ["tail", "-f", "/dev/null"]
