--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ robot/src/external/rf2o_laser_odometry/
 **/.DS-Store
 
 # 데이터셋 및 모델
-*.pt
-*.pkl
+#*.pt
+#*.pkl
 ARIA_Sync/data_lake/
 ARIA_Sync/valid_manifest.json
 aria_augmented_data.json
