--- a/ai/docker-compose.yml
+++ b/ai/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - PYTHONPATH=/app
     # 2. 볼륨 설정을 통해 상위 .env를 컨테이너 안으로 직접 넣어줌
     volumes:
-      - .:/app
+      - .:/app/ai
       - ../.env:/app/.env 
     stdin_open: true
     tty: true
