--- a/robot/src/my_robot_bringup/config/slam_toolbox.yaml
+++ b/robot/src/my_robot_bringup/config/slam_toolbox.yaml
@@ -1,10 +1,13 @@
 slam_toolbox:
   ros__parameters:
     use_sim_time: false
+
+    scan_topic: /scan
     map_frame: map
     odom_frame: odom
-    base_frame: base_link
-    scan_topic: /scan
-    mode: mapping
-    publish_tf: true
-    resolution: 0.05
+
+    base_frame: base_link        # <- 1번에서 본 child_frame_id로 바꿔!
+    transform_timeout: 3.0
+    throttle_scans: 3
+    scan_queue_size: 200
+
